fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* أضف هذه القواعد في ملف globals.css */
 
+* {
+  box-sizing: border-box;
+}
 :root {
   --max-width: 1200px;
   overflow-x: hidden;
-  max-width: 100vw;
-  background-color: rgb(73, 73, 73);
+  background-color: rgb(0, 0, 0);
 }
 
 .container {
   width: 100%;
-  max-width: var(--max-width);
   margin: 0 auto;
   padding: 0 1rem;
-  background-color: rgb(0, 0, 0);
 }
